--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,17 +63,17 @@ build_script:
   - '%make%'
 
 # deploy on bintray
-deploy:
-- provider: BinTray
-  username: openningia
-  api_key:
-    secure: +5ZaU/ubYVQCdXHgtbnmczUoLuDG0KYxZ/yPzi0oblV3DSMfhVhdx0Mb03ZqKKZf
-  subject: openningia
-  repo: Launchy
-  package: LaunchyInstaller
+#deploy:
+#- provider: BinTray
+#  username: openningia
+#  api_key:
+#    secure: +5ZaU/ubYVQCdXHgtbnmczUoLuDG0KYxZ/yPzi0oblV3DSMfhVhdx0Mb03ZqKKZf
+#  subject: openningia
+#  repo: Launchy
+#  package: LaunchyInstaller
 #  version: version
-  publish: true
-  override: true
+#  publish: true
+#  override: true
 #  explode: true
 
 # fetch repository as zip archive
